--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Arctic regions'
 - !lcc 'G'
 - !lcsh 'Nares, George S. (George Strong), 1831-1915'
+- GITenberg
 title: 'The Great Frozen Sea: A Personal Narrative of the Voyage of the "Alert"'
 url: http://www.gutenberg.org/ebooks/43608
